[FIX] sap.ui.unified.FileUploader: mobile style alignment
BCP: 1570017473

--- a/src/sap.ui.unified/src/sap/ui/unified/themes/base/FileUploader.less
+++ b/src/sap.ui.unified/src/sap/ui/unified/themes/base/FileUploader.less
@@ -36,6 +36,10 @@
 	display: inline-block;
 }
 
+.sapUiFup.sapUiFUM > form > div {
+	top: 2px;
+}
+
 .sapUiFupInputMask {  /* the element masking the real (but hidden) file input, so the clickable area has exactly the same size as the visible control */
 	display: inline-block;
 	position: absolute;
